@@ -1,0 +1,6 @@
+B AA0=0=0=JA AJA
+B AA0=SL0=KA ALKA
+B AA0=SN0=TA ANTA
+B AAVU0=OTTA AUTTA
+A EE0=0=0=La ELa
+A EE0=0=OSTa ESTa
