@@ -1,7 +1,8 @@
 Revision history for AM-Algorithm
 
 {{$NEXT}}
-
+    Fix incorrect gang handling
+    Fix for printing gangs with false values as feature names
 3.06      2015-05-31 20:43:59+09:00 Asia/Tokyo
     Added analogize for command line classification
     Fixed POD inaccuracies
